# OVERLAY

./: .gitignore  .gitlab-ci.yml  BENCHMARKS.md  Cargo.toml  README.md  build.rs  identity.toml.example  policy.toml.example
.cargo/: config.toml
.github/workflows/: arm64.yml  kernel-native.yml  pipeline.yml
benches/: demo_benchmarks.rs  identity_benchmarks.rs  oob_benchmarks.rs
benchmarks/mininet_local_range/: README.md
benchmarks/nsm_compliance_report/: ast_visual_graph.json  compilation_audit.md  vector_matrix_stress.rs
deploy/: airgap.sh  fleet.sh  install.sh  lib.sh  package.sh  rollback.sh  uninstall.sh  upgrade.sh  validate-config.sh
deploy/config/: identity.toml.template  policy.toml.template
deploy/kubernetes/: daemonset.yaml  network-policy.yaml
deploy/systemd/: syntriass-overlay.service
docs/: AIRGAP_TRUST_MODEL.md  AIR_GAPPED_OPERATIONS.md  ARM64_BENCHMARKS.md  ARM64_VALIDATION.md  AUDIT_READINESS_ASSESSMENT.md  AUDIT_READINESS_REASSESSMENT.md  AUDIT_TELEMETRY.md  BATTLEFIELD_RESILIENCE.md  CR2_NONCE_REUSE_REMEDIATION.md  CR3_AIRGAP_SIGNING.md  CR4_SUPPLY_CHAIN_SECURITY.md  CRITICAL_FINDINGS.md  CRYPTO_POLICY.md  DEFENCE_DEPLOYMENT_SCENARIO.md  DEFENCE_POLICY_PROFILES.md  DEFENCE_READINESS_REVIEW.md  DEPLOYABLE_PLATFORM_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RECOVERY_RESULTS.md  EBPF_POLICY_ENGINE.md  EGRESS_COVERAGE_REVIEW.md  FAIL_CLOSED_ASSURANCE.md  FAIL_CLOSED_VALIDATION.md  FLEET_MANAGEMENT.md  HANDSHAKE_DOS_HARDENING.md  HIERARCHICAL_POLICY.md  HSM_INTEGRATION.md  IDENTITY_LIFECYCLE.md  IDEX_COMMERCIALIZATION_PLAN.md  IDEX_DEFENCE_RELEVANCE.md  IDEX_EVALUATOR_QA.md  IDEX_EXECUTIVE_SUMMARY.md  IDEX_PROPOSED_PROBLEM_STATEMENT.md  IDEX_PROPOSED_TECHNICAL_SOLUTION.md  IDEX_SUBMISSION_MASTER.md  IDEX_TRL_PACKAGE.md  IDEX_VALIDATION_PACKAGE.md  KEY_STORAGE_ARCHITECTURE.md  KEY_STORAGE_VALIDATION.txt  KINETIC_STATE_MACHINE.md  (+24 more)
docs/defence-evidence/: 00_INDEX.md  01_THREAT_MODEL.md  02_SECURITY_MODEL.md  03_ARCHITECTURE.md  04_TRL_ASSESSMENT.md  05_RISK_REGISTER.md  06_BENCHMARK_REPORT.md  07_VALIDATION_REPORT.md  08_RESIDUAL_RISK_REPORT.md
ebpf/: COVERAGE_REPORT.txt  Cargo.toml  POLICY_REPORT.txt  README.md
ebpf/c/: build.sh  connect4.bpf.c  loader.c  policy.bpf.c  policy_loader.c  policy_v2.bpf.c  policy_v2_loader.c
ebpf/c/testmatrix/: mx_c.c  mx_direct.c  mx_go.go  mx_rust.rs
ebpf/src/: audit.rs  cgroup_connect.rs  main.rs  maps.rs  types.rs
examples/: crypto_ops.rs  phase2_demo.md
examples/python_client/: client.py
examples/static_go_client/: main.go
examples/static_rust_client/: Cargo.toml
examples/static_rust_client/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: cookie_parse.rs  handshake_respond.rs  kernel_event_parse.rs  session_open.rs
include/: cdac_sycl_bridge.h
scripts/: ebpf_audit_validate.sh  ebpf_coverage_validate.sh  ebpf_crypto_policy_validate.sh  ebpf_policy_hier_validate.sh  ebpf_policy_v2_validate.sh  ebpf_policy_validate.sh  ebpf_profile_validate.sh  ebpf_quarantine_validate.sh  mininet_tactical_mesh.py  netem_validate.sh  nsm_ast_verify.sh  phase3_pcap_validate.sh  run_miri.sh
scripts/keystore/: pkcs11_seal.sh  pkcs11_setup.sh  pkcs11_unseal.sh  tpm_seal.sh  tpm_setup.sh  tpm_unseal.sh  validate.sh
src/: accelerator.rs  airgap.rs  benchmarks.rs  fd_passing.rs  fd_state.rs  handshake_guard.rs  identity.rs  interceptor.rs  kernel_native.rs  keystore.rs  kinetic.rs  lib.rs  over_socket.rs  profiles.rs  proxy.rs  session.rs  telemetry.rs
src/accelerator/: cdac_sycl_bridge.cpp
src/audit/: events.rs  mod.rs  sink.rs
src/crypto/: bench.rs  crypto_policy.rs  fallback.rs  generic.rs  mod.rs  nist1024.rs  nist768.rs  oob.rs  session.rs
src/kernel/: events.rs  loader.rs  maps.rs  mod.rs
src/policy/: engine.rs  maps.rs  mod.rs
tests/: adversarial_policy_tests.rs  battlefield_resilience.rs  chaos_orchestration.rs  characterize.py  concurrency_stress.rs  concurrency_test.py  cr2_nonce_reuse_tests.rs  cr3_airgap_signing_tests.rs  cr4_supply_chain_tests.rs  crypto_policy_tests.rs  defence_deployment_tests.rs  defense_scenario_tests.rs  egress_test.py  fail_closed_properties.rs  failclosed_test.py  fallback_wire.py  fd_passing_bridge_tests.rs  fork_test.py  handshake_dos_integration.rs  handshake_dos_tests.rs  identity_lifecycle_tests.rs  kernel_bridge_tests.rs  keystore_external_tests.rs  kinetic_failover_tests.rs  ktls_roundtrip.rs  ktls_secret_bridge_tests.rs  layout_sanitization_tests.rs  leakage_analysis.rs  loom_model.rs  multinode_tests.rs  netimpair_test.py  over_socket_tests.rs  policy_enforcement_tests.rs  range_simulation.rs  session_binding_tests.rs  session_hardening_tests.rs  verify_wire.py  vulnerable_app.py
validation/: Dockerfile.ubuntu24  README.md
validation/docker/: client.Dockerfile
validation/scripts/: build_all.sh  common.sh  generate_report.py  record_result.py  run_adversarial.sh  run_matrix.sh  run_performance.sh  setup_ubuntu24.sh
validation/systemd/: syntriass-daemon.service
validation/workloads/: tcp_server.py
validation/workloads/container_client/: Dockerfile
validation/workloads/go_client/: main.go
validation/workloads/python_client/: client.py
validation/workloads/rust_client/: Cargo.toml
validation/workloads/rust_client/src/: main.rs
validation/workloads/syscall_client/: syscall_client.c
xtask/: README.md
