[package]
name = "syntriass-overlay"
version = "0.1.0"
edition = "2021"
description = "Linux LD_PRELOAD transparent hybrid (X25519 + ML-KEM-768) encryption tunnel for POSIX stream sockets. PoC."
authors = ["K. NAGA SRI GANESH"]
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "syntriass_overlay"
crate-type = ["cdylib", "rlib"]
# cdylib: the LD_PRELOAD .so.  rlib: lets `cargo test` link crypto.rs unit tests.

[[bench]]
name = "demo_benchmarks"
harness = false

[dependencies]
# Raw FFI: dlsym/RTLD_NEXT, errno, fcntl, the real send/recv/connect. No SHA, no crypto here.
libc = "=0.2.168"
# One-time, race-free interior init of the original symbol pointers.
once_cell = "=1.19.0"
# Verified against docs.rs: ml-kem 0.2.3 depends on rand_core ^0.6.4 internally.
ml-kem = "=0.2.3"
# Verified: x25519-dalek 2.0.1 uses rand_core 0.6; `getrandom` feature exposes EphemeralSecret::random().
x25519-dalek = { version = "=2.0.1", features = ["getrandom"] }
# rand_core 0.6 OsRng is accepted by BOTH ml-kem (CryptoRngCore) and x25519 (RngCore+CryptoRng).
rand_core = { version = "=0.6.4", features = ["getrandom"] }
# AEAD payload cipher.
aes-gcm = "=0.10.3"
# Key schedule.
hkdf = "=0.12.4"
sha2 = "=0.10.8"
# Classical identity signatures.
ed25519-dalek = { version = "=2.2.0", features = ["rand_core", "zeroize"] }
# Post-quantum identity signatures (FIPS 204 ML-DSA-65).
ml-dsa = { version = "=0.1.1", features = ["getrandom", "zeroize"] }
# Explicit scrubbing of key material and plaintext buffers.
zeroize = { version = "=1.8.2", features = ["derive"] }
# Admission webhook control plane binary.
axum = "=0.7.9"
tokio = { version = "=1.43.0", features = ["io-util", "macros", "net", "rt-multi-thread"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.132"
base64 = "=0.22.1"
# Metrics exposition for the webhook/admin sidecar surface.
prometheus = "=0.13.4"

[dev-dependencies]
# For deterministic unit tests we feed fixed seeds through a seedable RNG.
# 0.8.6 is the security-patched release in the 0.8 line (advisory affects < 0.8.6);
# stays on rand_core 0.6, so no collision with the pinned rand_core =0.6.4.
rand = "=0.8.6"
# Integration tests assert fail-closed teardown (fcntl/close) on raw fds.
libc = "=0.2.168"
# Over-socket handshake tests drive a loopback pair with two async tasks.
tokio = { version = "=1.43.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }

[profile.release]
# `unwind` (not `abort`) so the `catch_unwind` FFI shields in interceptor.rs are
# load-bearing: a panic on the interposed path is caught at the boundary and
# returned as EIO instead of SIGABRT-ing the host process. Safe because EVERY
# `#[no_mangle] extern "C"` export is wrapped in `ffi_guard_*`, so a panic never
# actually unwinds across the C boundary (which would be UB / would abort).
panic = "unwind"
opt-level = 3
